Fix smiley spacing

--- a/comments/frontend/view/default/stylesheet/css/stylesheet.css
+++ b/comments/frontend/view/default/stylesheet/css/stylesheet.css
@@ -3650,7 +3650,7 @@
   width: 20px;
 }
 
-.cmtx_smiley:not(:first-child) {
+.cmtx_icons_container .cmtx_smiley:not(:first-child) {
   margin-left: 15px;
 }
 
