--- a/comments/frontend/view/default/stylesheet/sass/partial/_form.scss
+++ b/comments/frontend/view/default/stylesheet/sass/partial/_form.scss
@@ -332,7 +332,7 @@
     width: 20px;
 }
 
-.cmtx_smiley:not(:first-child) {
+.cmtx_icons_container .cmtx_smiley:not(:first-child) {
     margin-left: 15px;
 }
 
